--- a/hello.html
+++ b/hello.html
@@ -25,5 +25,21 @@
 			  </li>
 			</ul>
 		</nav>
+		<nav>
+			<ul>
+			  <li>
+				  <a href="google-image.html">Image Search</a>
+			  </li>
+			  <li>
+				  <a href="google-advance.html">Advanced Search</a>
+			  </li>
+			  <li>
+				  <img src="img/apps-icon.png" alt="apps" width=20px>
+			  </li>
+			  <li>
+				  <button class="sn" type="submit">Sign In</button>
+			  </li>
+			</ul>
+		</nav>
     </body>
 </html>
